@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1668] fixed saving graphs with web items (Aly)
  - [ZBX-1728] fixed expression deletion in log trigger form (Aly)
  - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
  - [ZBX-1732] added node and group name for screen widget "triggers info" (Vedmak)
